# currency-exchange-rust

./: Cargo.toml  Dockerfile  README.md  rustfmt.toml
.github/workflows/: docker.yml  main.yml
src/: cache.rs  config.rs  exchange.rs  main.rs  requests.rs  tests.rs
src/mock_data/: EUR.json  PLN.json  codes.json
