[package]
name = "currency-exchange"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = [ "derive" ] }
reqwest = "0.11.25"
rusqlite = { version = "0.31.0", features = ["bundled", "array"] }
rusty-money = "0.4.1"
serde = { version ="1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
rust_decimal = "1.34"
rust_decimal_macros = "1.34"